package Lab6p2;

public class MultipleChoice {
    private questions question;
}
