package Lab6p2;

public class questions {
    private quiz quiz;
}
