package Lab6p2;

public class quiz {
}
