@startuml

title __LAB6P2's Class Diagram__\n

  namespace  {
    namespace ab6 {
      namespace 2 {
        class Lab6p2.MultipleChoice {
        }
      }
    }
  }
  

  namespace  {
    namespace ab6 {
      namespace 2 {
        class Lab6p2.questions {
        }
      }
    }
  }
  

  namespace  {
    namespace ab6 {
      namespace 2 {
        class Lab6p2.quiz {
        }
      }
    }
  }
  

  Lab6p2.MultipleChoice o-- Lab6p2.questions : question
  Lab6p2.questions o-- Lab6p2.quiz : quiz


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
